--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Croissant Au Chocolat</title>
   </head>
   <body>
-    <h1>Croissant au chocholat</h1>
+    <h1>🥐 Croissant au chocholat</h1>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       named for its historical crescent shape. Croissants and other viennoiserie
