added more design

--- a/photo.html
+++ b/photo.html
@@ -9,6 +9,17 @@
   </head>
   <body>
     <h1>Photography</h1>
-    <a href="index.html">Back to homepage</a>
+
+    <img src="/css/images.jpeg" />
+    <div>
+      <footer>
+        <div class="homepage"></div>
+        <a href="/homepage.html">Home Page</a>
+
+        <a href="/photo.html">Photho</a>
+
+        <a href="/contact.html">contact us</a>
+      </footer>
+    </div>
   </body>
 </html>
