--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <a href="/homepage.html">Home Page</a>
-    <a href="/photo.html">Photho</a>
-    <a href="/contact.html">contact us</a>
+    <footer>
+      <div class="homepage"></div>
+      <a href="/homepage.html">Home Page</a>
+
+      <a href="/photo.html">Photho</a>
+
+      <a href="/contact.html">contact us</a>
+    </footer>
   </body>
 </html>
