homepage seo title

--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Home page</title>
+    <title>Home page/croissant au chocolat/croissant.io</title>
   </head>
   <body></body>
   <h1>Home Page</h1>
