--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Photo</title>
+    <title>Photo/croissant au chocolat/croissant.io</title>
   </head>
   <body>
     <h1>Photography</h1>
