--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,18 @@
 
     <title>Home page/croissant au chocolat/croissant.io</title>
   </head>
-  <body></body>
+  <body>
+
+  </body>
   <h1>Home Page</h1>
+
+  <h2>🥐 Croissant au chocholat </h1>
+  <p>
+    A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+    named for its historical crescent shape. Croissants and other viennoiserie
+    are made of a layered yeast-leavened dough
+  </p>
+
+
   <a href="index.html">Back to Homepage</a>
 </html>
