--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Photography</h1>
 
-    <img src="/css/images.jpeg" />
+    <img src="/css/images.jpeg" alt="croissant chaud au chocolat" />
     <div>
       <footer>
         <div class="homepage"></div>
