--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1>Contact us</h1>
+    <p>
+      Email us at
+      <a href="mailto:hello@croissant.com" title="email">hello@croissant.com</a>
+      for more info
+    </p>
 
     <a href="index.html">Back to Homepage</a>
   </body>
